--- a/gui-user/mainwindow.ui
+++ b/gui-user/mainwindow.ui
@@ -6,109 +6,223 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>569</width>
-    <height>465</height>
+    <width>874</width>
+    <height>527</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Test Window</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>30</y>
-      <width>132</width>
-      <height>262</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QCheckBox" name="enabled_message">
-       <property name="text">
-        <string>Enabled</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="collapse_on_enable">
-       <property name="text">
-        <string>Collapse on enable</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="error_message">
-       <property name="text">
-        <string>Error Message</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="warning_message">
-       <property name="text">
-        <string>Warning Message</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="info_massage">
-       <property name="text">
-        <string>Info Message</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="debug_error_message">
-       <property name="text">
-        <string>Debug Error Message</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="debug_warning_message">
-       <property name="text">
-        <string>Debug  Warning Message</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="debug_info_message">
-       <property name="text">
-        <string>Debug Info Message</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QRadioButton" name="use_class">
-       <property name="text">
-        <string>Use class</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QRadioButton" name="static_call">
-       <property name="text">
-        <string>Static call</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout">
+      <item>
+       <widget class="QCheckBox" name="enabled_message">
+        <property name="text">
+         <string>Enabled</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="collapse_on_enable">
+        <property name="text">
+         <string>Collapse on enable</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_3">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="error_message">
+        <property name="text">
+         <string>Error Message</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="warning_message">
+        <property name="text">
+         <string>Warning Message</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="info_massage">
+        <property name="text">
+         <string>Info Message</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="debug_error_message">
+        <property name="text">
+         <string>Debug Error Message</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="debug_warning_message">
+        <property name="text">
+         <string>Debug  Warning Message</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="debug_info_message">
+        <property name="text">
+         <string>Debug Info Message</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="use_class">
+        <property name="text">
+         <string>Use class</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="static_call">
+        <property name="text">
+         <string>Static call</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="UserMsgLogW" name="log_window"/>
+    </item>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QCheckBox" name="ck_err">
+        <property name="text">
+         <string>Error</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="ck_warning">
+        <property name="text">
+         <string>Warning</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="ck_info">
+        <property name="text">
+         <string>Information</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="ck_dbg_err">
+        <property name="text">
+         <string>Debug Error</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="ck_dbg_wrn">
+        <property name="text">
+         <string>Debug Warning</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="ck_dbg_info">
+        <property name="text">
+         <string>Debug Information</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="clear_log">
+        <property name="text">
+         <string>Clear</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>569</width>
+     <width>874</width>
      <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>UserMsgLogW</class>
+   <extends>QTextEdit</extends>
+   <header location="global">usermsggui/usermsglogw.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
